--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <!--Navbar-->   
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 ">
         <div class="container">
-            <a href="#" class="navbar-brand">Neo<span class="text-warning">PRODUCT</span>EU</a> 
+            <a href="#" class="navbar-brand">Neo<span class="text-danger">PRODUCT</span>EU</a> 
 
             <button 
             class="navbar-toggler" 
@@ -26,13 +26,13 @@
             <div class="collapse navbar-collapse" id="navmenu">
                <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
+                    <a href="#servies" class="nav-link">Our Services</a>
+                </li>
+                <li class="nav-item">
                     <a href="#about" class="nav-link">About us</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#questions" class="nav-link">Questions</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#Our Team" class="nav-link">Our Team</a>
+                    <a href="#contact" class="nav-link">Contact us</a>
                 </li>
                 <li class="nav-item">
                   <a href="http://localhost/shop/upload/" class="nav-link">Shop</a>
@@ -42,7 +42,50 @@
         </div>  
     </nav>
 
-    <!--Showcase-->
+    <!--Carousel-->
+    <div id="MyCarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#MyCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#MyCarousel" data-slide-to="1"></li>
+        <li data-target="#MyCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <section class="bg-danger text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+            <div class="container">
+              <div class="d-sm-flex aligh-items-center justify-content-between">
+                <div>
+                    <h1>Neo<span class="text-danger">PRODUCT</span></h1> 
+                    <h2>Take your  <span class="text-warning">PRODUCT</span> to new hights</h2>    
+                    <p class="lead my-4 text-warning">
+                        We are passionate individuals that came together to bring innovation and change to those in need!
+                        We specialize in consulting and developement 
+                    </p>
+                    <a class="btn btn-info btn-warning" href=".." role="button">Learn More</a>
+                </div>
+                <img class="img-fluid float-right d-none d-sm-block" src="/NeoWeb/images/pngwing.com.png" alt=""/>
+              </div>  
+            </div>
+          </section>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/NeoWeb/images/pngwing.com (1).png" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/NeoWeb/images/pngwing.com.png" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#MyCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Pr</span>
+      </a>
+      <a class="carousel-control-next" href="#MyCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+    <!--Showcase
     <section class="bg-danger text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
         <div class="container">
           <div class="d-sm-flex aligh-items-center justify-content-between">
@@ -50,15 +93,16 @@
                 <h1>Neo<span class="text-danger">PRODUCT</span></h1> 
                 <h2>Take your  <span class="text-warning">PRODUCT</span> to new hights</h2>    
                 <p class="lead my-4 text-warning">
-                    Are you looking to develop or improve you 
+                    We are passionate individuals that came together to bring innovation and change to those in need!
+                    We specialize in consulting and developement 
                 </p>
-                <a class="btn btn-info btn-warning" href="http://localhost/shop/upload/index.php?route=product/category&language=en-gb&path=59" role="button">Order now</a>
+                <a class="btn btn-info btn-warning" href="http://localhost/shop/upload/index.php?route=product/category&language=en-gb&path=59" role="button">O</a>
             </div>
             <img class="img-fluid float-right d-none d-sm-block"  alt=""/>
           </div>  
         </div>
     </section>
-
+  -->
    
 
 
