carousel and custom colors

--- a/index.html
+++ b/index.html
@@ -54,16 +54,36 @@
           <section class="bg-danger text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
             <div class="container">
               <div class="d-sm-flex aligh-items-center justify-content-between">
-                <div>
-                    <h1>Neo<span class="text-danger">PRODUCT</span></h1> 
+                <div class="text-left has-bg-img">
+                    <h1>Neo<span class="text-black">PRODUCT</span></h1> 
                     <h2>Take your  <span class="text-warning">PRODUCT</span> to new hights</h2>    
-                    <p class="lead my-4 text-warning">
+                    <p class="lead my-4 text-warning d-flex align-items-center">
                         We are passionate individuals that came together to bring innovation and change to those in need!
                         We specialize in consulting and developement 
                     </p>
                     <a class="btn btn-info btn-warning" href="" role="button">Learn More</a>
-                </div>
-                <img class="img-fluid float-right d-none d-sm-block" src="/images/pngwing.com.png" alt=""/>
+  
+                  </div>
+                <img class="img-fluid float-right d-none d-sm-block w-50" src="/images/head 3d.png" alt=""/>
+              </div>  
+            </div>
+        </section>
+        </div>
+        <div class="carousel-item">
+          <section class="bg-danger text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+            <div class="container">
+              <div class="d-sm-flex aligh-items-center justify-content-between">
+                <div class="has-bg-img">
+                    <h1>Neo<span class="text-danger">PRODUCT</span></h1> 
+                    <h2>Take your  <span class="text-warning">PRODUCT</span> to new hights</h2>    
+                    <p class="lead my-4 text-warning">
+                        We are passionate individuals that came together to bring innovation and change to those in need!
+                        We specialize in consulting and developement 
+                    </p>
+                    <a class="btn btn-info btn-warning" href="http://localhost/shop/upload/index.php?route=product/category&language=en-gb&path=59" role="button">Learn More</a>
+                      
+                  </div>
+                <img class="bg-image float-right d-none d-sm-block w-50" src="/images/vector hand.png" alt="Responsive image"/>
               </div>  
             </div>
         </section>
@@ -81,25 +101,7 @@
                     </p>
                     <a class="btn btn-info btn-warning" href="http://localhost/shop/upload/index.php?route=product/category&language=en-gb&path=59" role="button">Learn More</a>
                 </div>
-                <img class="img-fluid float-right d-none d-sm-block" src="/images/pngwing.com.png" alt=""/>
-              </div>  
-            </div>
-        </section>
-        </div>
-        <div class="carousel-item">
-          <section class="bg-danger text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
-            <div class="container">
-              <div class="d-sm-flex aligh-items-center justify-content-between">
-                <div>
-                    <h1>Neo<span class="text-danger">PRODUCT</span></h1> 
-                    <h2>Take your  <span class="text-warning">PRODUCT</span> to new hights</h2>    
-                    <p class="lead my-4 text-warning">
-                        We are passionate individuals that came together to bring innovation and change to those in need!
-                        We specialize in consulting and developement 
-                    </p>
-                    <a class="btn btn-info btn-warning" href="http://localhost/shop/upload/index.php?route=product/category&language=en-gb&path=59" role="button">Learn More</a>
-                </div>
-                <img class="img-fluid float-right d-none d-sm-block" src="/images/pngwing.com.png" alt=""/>
+                <img class="img-fluid float-right d-none d-sm-block" src="" alt=""/>
               </div>  
             </div>
         </section>
@@ -146,9 +148,9 @@
                 <div class="h1 mb-3">
                   <i class="bi bi-laptop"></i>
                 </div>
-                <h3 class="card-title mb-3">Our Team</h3>
+                <h3 class="card-title mb-3">Our Services</h3>
                 <p class="card-text">
-                  History of Chocolate
+                  Click here if you are interested to learn more about our services
                 </p>
                 <a href="#Our Team" class="btn btn-success nav-link text-white">Read More</a>
               </div>
@@ -160,9 +162,11 @@
                 <div class="h1 mb-3">
                   <i class="bi bi-person-square"></i>
                 </div>
-                <h3 class="card-title mb-3">History </h3>
+                <h3 class="card-title mb-3">Our Mission </h3>
                 <p class="card-text">
-                  Our team
+                  Learn about what we stand for 
+                  <br>
+                  <br>
                 </p>
                 <a href="#about" class="btn btn-success nav-link text-white">Read More</a>
               </div>
@@ -174,9 +178,11 @@
                 <div class="h1 mb-3">
                   <i class="bi bi-people"></i>
                 </div>
-                <h3 class="card-title mb-3">Order</h3>
+                <h3 class="card-title mb-3">Contact us</h3>
                 <p class="card-text">
-                  Lorem, ipsum dolor 
+                  Would you like to get in touch 
+                  <br>
+                  <br>
                 </p>
                 <a href="http://localhost/shop/upload/index.php?route=product/category&language=en-gb&path=59" class="btn btn-success nav-link text-white">Order Now</a>
               </div>
