--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <section class="bg-danger text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
             <div class="container">
               <div class="d-sm-flex aligh-items-center justify-content-between">
-                <div class="text-left has-bg-img">
+                <div class="text-left align-self-center">
                     <h1>Neo<span class="text-black">PRODUCT</span></h1> 
                     <h2>Take your  <span class="text-warning">PRODUCT</span> to new hights</h2>    
                     <p class="lead my-4 text-warning d-flex align-items-center">
@@ -73,17 +73,17 @@
           <section class="bg-danger text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
             <div class="container">
               <div class="d-sm-flex aligh-items-center justify-content-between">
-                <div class="has-bg-img">
-                    <h1>Neo<span class="text-danger">PRODUCT</span></h1> 
+                <div class="text-left align-self-center">
+                    <h1>Neo<span class="text-black">PRODUCT</span></h1> 
                     <h2>Take your  <span class="text-warning">PRODUCT</span> to new hights</h2>    
-                    <p class="lead my-4 text-warning">
+                    <p class="lead my-4 text-warning d-flex align-items-center">
                         We are passionate individuals that came together to bring innovation and change to those in need!
                         We specialize in consulting and developement 
                     </p>
-                    <a class="btn btn-info btn-warning" href="http://localhost/shop/upload/index.php?route=product/category&language=en-gb&path=59" role="button">Learn More</a>
-                      
+                    <a class="btn btn-info btn-warning" href="" role="button">Learn More</a>
+  
                   </div>
-                <img class="bg-image float-right d-none d-sm-block w-50" src="/images/vector hand.png" alt="Responsive image"/>
+                <img class="img-fluid float-right d-none d-sm-block w-50" src="/images/vector hand.png" alt=""/>
               </div>  
             </div>
         </section>
@@ -92,16 +92,17 @@
           <section class="bg-danger text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
             <div class="container">
               <div class="d-sm-flex aligh-items-center justify-content-between">
-                <div>
-                    <h1>Neo<span class="text-danger">PRODUCT</span></h1> 
+                <div class="text-left align-self-center">
+                    <h1>Neo<span class="text-black">PRODUCT</span></h1> 
                     <h2>Take your  <span class="text-warning">PRODUCT</span> to new hights</h2>    
-                    <p class="lead my-4 text-warning">
+                    <p class="lead my-4 text-warning d-flex align-items-center">
                         We are passionate individuals that came together to bring innovation and change to those in need!
                         We specialize in consulting and developement 
                     </p>
-                    <a class="btn btn-info btn-warning" href="http://localhost/shop/upload/index.php?route=product/category&language=en-gb&path=59" role="button">Learn More</a>
-                </div>
-                <img class="img-fluid float-right d-none d-sm-block" src="" alt=""/>
+                    <a class="btn btn-info btn-warning" href="" role="button">Learn More</a>
+  
+                  </div>
+                <img class="img-fluid float-right d-none d-sm-block w-50" src="/images/head 3d.png" alt=""/>
               </div>  
             </div>
         </section>
