--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <!--Navbar-->   
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 ">
         <div class="container">
-            <a href="#" class="navbar-brand">Neo<span class="text-danger">PRODUCT</span>EU</a> 
+            <a href="#" class="navbar-brand">Neo<span class="text-danger">PRODUCT</span></a> 
 
             <button 
             class="navbar-toggler" 
@@ -65,7 +65,7 @@
                     <a class="btn btn-info btn-warning" href="" role="button">Learn More</a>
   
                   </div>
-                <img class="img-fluid float-right d-none d-sm-block w-50" src="/NeoWeb/images/head 3d.png" alt=""/>
+                <img class="img-fluid float-right d-none d-sm-block w-50" src="/NeoWeb/images/tree.svg" alt=""/>
               </div>  
             </div>
         </section>
@@ -80,6 +80,9 @@
                     <p class="lead my-4 text-warning d-flex align-items-center">
                         Are you looking to develop a new product and need help with business plan, market analysis or AGILE project management? 
                         Get in touch with us! From business conception to AGILE team building and PM, PO consultancy.
+                        <br>
+                        <br>
+                        <br>
                     </p>
                     <a class="btn btn-info btn-warning" href="" role="button">Learn More</a>
   
@@ -204,20 +207,19 @@
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-md">
-            <img src="" class="img-fluid" alt="" />
+            <img src="/NeoWeb/images/earth.svg" class="img-fluid w-75" alt="" />
           </div>
           <div class="col-md p-5">
-            <h1 class="text-dark">Learn more about our chocolate</h1>
-            <h3 class="text-dark" >
-              Life is like chocolate, 
+            <h1 class="text-danger">Our Mission</h1>
+            <h3 class="text-info" >
+              Bring sustainable innovative products to enable positive change where needed 
             </h3>
             <h4 class="text-dark">
-              - without sugar (with honey from ecologically clean areas) <br>
-              - handmade <br>
+             Lorem Lorem  Lorem Lorem  Lorem Lorem  Lorem Lorem
               
             </h4>
-            <a href="#" class="btn btn-dark mt-3">
-              <i class="bi bi-chevron-right"></i> Read More
+            <a href="#" class="btn btn-danger mt-3">
+              <i class="bi bi-chevron-right">Read More</i> 
             </a>
           </div>
         </div>
@@ -247,147 +249,7 @@
       </div>
     </section>
     -->
-    <!-- Question Accordion -->
-    <section id="questions" class="p-5 bg-warning">
-      <div class="container">
-        <h2 class="text-center mb-4">Frequently Asked Questions</h2>
-        <div class="accordion accordion-flush" id="questions">
-          <!-- Item 1 -->
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#question-one"
-              >
-                What is your chocolate made of?
-              </button>
-            </h2>
-            <div
-              id="question-one"
-              class="accordion-collapse collapse"
-              data-bs-parent="#questions"
-            >
-              <div class="accordion-body">
-                Lorem Simpusium bla bla
-            </div>
-          </div>
-          <!-- Item 2 -->
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#question-two"
-              >
-                How much does it cost to attend?
-              </button>
-            </h2>
-            <div
-              id="question-two"
-              class="accordion-collapse collapse"
-              data-bs-parent="#questions"
-            >
-              <div class="accordion-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                totam tempora accusamus modi explicabo accusantium consequatur,
-                praesentium rem quisquam molestias at quos vero. Officiis ad
-                velit doloremque at. Dignissimos praesentium necessitatibus
-                natus corrupti cum consequatur aliquam! Minima molestias iure
-                quam distinctio velit.
-              </div>
-            </div>
-          </div>
-          <!-- Item 3 -->
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#question-three"
-              >
-                What do I need to Know?
-              </button>
-            </h2>
-            <div
-              id="question-three"
-              class="accordion-collapse collapse"
-              data-bs-parent="#questions"
-            >
-              <div class="accordion-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                totam tempora accusamus modi explicabo accusantium consequatur,
-                praesentium rem quisquam molestias at quos vero. Officiis ad
-                velit doloremque at. Dignissimos praesentium necessitatibus
-                natus corrupti cum consequatur aliquam! Minima molestias iure
-                quam distinctio velit.
-              </div>
-            </div>
-          </div>
-          <!-- Item 4 -->
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#question-four"
-              >
-                How Do I sign up?
-              </button>
-            </h2>
-            <div
-              id="question-four"
-              class="accordion-collapse collapse"
-              data-bs-parent="#questions"
-            >
-              <div class="accordion-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                totam tempora accusamus modi explicabo accusantium consequatur,
-                praesentium rem quisquam molestias at quos vero. Officiis ad
-                velit doloremque at. Dignissimos praesentium necessitatibus
-                natus corrupti cum consequatur aliquam! Minima molestias iure
-                quam distinctio velit.
-              </div>
-            </div>
-          </div>
-          <!-- Item 5 -->
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#question-five"
-              >
-                Do you help me find a job?
-              </button>
-            </h2>
-            <div
-              id="question-five"
-              class="accordion-collapse collapse"
-              data-bs-parent="#questions"
-            >
-              <div class="accordion-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                totam tempora accusamus modi explicabo accusantium consequatur,
-                praesentium rem quisquam molestias at quos vero. Officiis ad
-                velit doloremque at. Dignissimos praesentium necessitatibus
-                natus corrupti cum consequatur aliquam! Minima molestias iure
-                quam distinctio velit.
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
 
     <!--Our instructors-->
 
@@ -403,7 +265,7 @@
             <div class="card bg-warning">
               <div class="card-body text-center">
                 <img
-                  src="/NeoWeb/images/Hsaine El-Ali.jfiff"
+                  src="/NeoWeb/images/Hsaine El-Ali.jfif"
                   class="rounded-circle mb-3 w-50"
                   alt=""
                 />
@@ -424,11 +286,11 @@
             <div class="card bg-warning">
               <div class="card-body text-center">
                 <img
-                  src="/images/Valentin Y.jfif"
+                  src=""
                   class="rounded-circle mb-3 w-50"
                   alt=""
                 />
-                <h3 class="card-title mb-3">Valentyn Yaroshenko</h3>
+                <h3 class="card-title mb-3">Hussein Husseini</h3>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
@@ -449,7 +311,7 @@
                   class="rounded-circle mb-3 w-50"
                   alt=""
                 />
-                <h3 class="card-title mb-3">Misha</h3>
+                <h3 class="card-title mb-3">Member 3</h3>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Assumenda accusamus nobis sed cupiditate iusto? Quibusdam.
@@ -466,6 +328,148 @@
         </div>
       </div>
     </section>
+
+        <!-- Question Accordion -->
+        <section id="questions" class="p-5 bg-warning">
+          <div class="container">
+            <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+            <div class="accordion accordion-flush" id="questions">
+              <!-- Item 1 -->
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#question-one"
+                  >
+                    What is your chocolate made of?
+                  </button>
+                </h2>
+                <div
+                  id="question-one"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#questions"
+                >
+                  <div class="accordion-body">
+                    Lorem Simpusium bla bla
+                </div>
+              </div>
+              <!-- Item 2 -->
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#question-two"
+                  >
+                    How much does it cost to attend?
+                  </button>
+                </h2>
+                <div
+                  id="question-two"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#questions"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+                    beatae fuga animi distinctio perspiciatis adipisci velit maiores
+                    totam tempora accusamus modi explicabo accusantium consequatur,
+                    praesentium rem quisquam molestias at quos vero. Officiis ad
+                    velit doloremque at. Dignissimos praesentium necessitatibus
+                    natus corrupti cum consequatur aliquam! Minima molestias iure
+                    quam distinctio velit.
+                  </div>
+                </div>
+              </div>
+              <!-- Item 3 -->
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#question-three"
+                  >
+                    What do I need to Know?
+                  </button>
+                </h2>
+                <div
+                  id="question-three"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#questions"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+                    beatae fuga animi distinctio perspiciatis adipisci velit maiores
+                    totam tempora accusamus modi explicabo accusantium consequatur,
+                    praesentium rem quisquam molestias at quos vero. Officiis ad
+                    velit doloremque at. Dignissimos praesentium necessitatibus
+                    natus corrupti cum consequatur aliquam! Minima molestias iure
+                    quam distinctio velit.
+                  </div>
+                </div>
+              </div>
+              <!-- Item 4 -->
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#question-four"
+                  >
+                    How Do I sign up?
+                  </button>
+                </h2>
+                <div
+                  id="question-four"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#questions"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+                    beatae fuga animi distinctio perspiciatis adipisci velit maiores
+                    totam tempora accusamus modi explicabo accusantium consequatur,
+                    praesentium rem quisquam molestias at quos vero. Officiis ad
+                    velit doloremque at. Dignissimos praesentium necessitatibus
+                    natus corrupti cum consequatur aliquam! Minima molestias iure
+                    quam distinctio velit.
+                  </div>
+                </div>
+              </div>
+              <!-- Item 5 -->
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#question-five"
+                  >
+                    Do you help me find a job?
+                  </button>
+                </h2>
+                <div
+                  id="question-five"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#questions"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+                    beatae fuga animi distinctio perspiciatis adipisci velit maiores
+                    totam tempora accusamus modi explicabo accusantium consequatur,
+                    praesentium rem quisquam molestias at quos vero. Officiis ad
+                    velit doloremque at. Dignissimos praesentium necessitatibus
+                    natus corrupti cum consequatur aliquam! Minima molestias iure
+                    quam distinctio velit.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
      <!--Newsletter-->
 <!--<section class="bg-warning text-light p-5">
@@ -484,7 +488,7 @@
   </div>
 </section>-->
 
-    <!-- Contact & Map -->
+    <!-- Contact & Map 
     <section class="p-5 bg-success">
       <div class="container">
         <div class="row g-4">
@@ -502,23 +506,24 @@
                 enroll@frontendbc.test
               </li>
             </ul>
-          </div>
+          </div>-->
           <!--<div class="col-md">
             <div id="map"></div>
-          </div>-->
+          </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <!--Contact form 2-->
-    <div class="container">]
+    <section class="p-5 bg-success">
+    
       <div class=" text-center mt-5 ">
           <h1 >Bootstrap Contact Form</h1>                       
       </div> 
       <div class="row ">
         <div class="col-lg-7 mx-auto">
-          <div class="card mt-2 mx-auto p-4 bg-light">
-            <div class="card-body bg-light">
+          <div class="card mt-2 mx-auto p-4 bg-warning">
+            <div class="card-body bg-success">
               <div class = "container">
                 <form id="contact-form" role="form">     
 
@@ -568,8 +573,9 @@
                               >
                           </div>
                       </div>
-                  <div class="col-md-12">                     
-                      <input type="submit" class="btn btn-success btn-send  pt-2 btn-block
+                  <div class="col-md-12"> 
+                    <br>                    
+                      <input type="submit" class="btn btn-danger btn-send  pt-2 btn-block
                           " value="Send Message" >                
               </div>       
               </div>
@@ -577,17 +583,18 @@
        </form>
       </div>
           </div>
-  </div>
+  
+</section>
       <!-- /.8 -->
   </div>
   <!-- /.row-->
 </div>
-    </div>
+    </div>-->
 
     <!-- Footer -->
     <footer class="p-5 bg-dark text-white text-center position-relative">
       <div class="container">
-        <p class="lead">Copyright &copy; 2021 Frontend Bootcamp</p>
+        <p class="lead">Copyright &copy; NeoProduct</p>
 
         <a href="#" class="position-absolute bottom-0 end-0 p-5">
           <i class="bi bi-arrow-up-circle h1"></i>
