--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <section class="bg-danger text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+          <section class="bg-warning text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
             <div class="container">
               <div class="d-sm-flex aligh-items-center justify-content-between">
-                <div class="text-left align-self-center">
+                <div class="text-left align-self-center text-black">
                     <h1>Neo<span class="text-black">PRODUCT</span></h1> 
-                    <h2>Take your  <span class="text-warning">PRODUCT</span> to new hights</h2>    
-                    <p class="lead my-4 text-warning d-flex align-items-center">
+                    <h2>Take your  <span class="text-danger">PRODUCT</span> to new hights</h2>    
+                    <p class="lead my-4 text-black d-flex align-items-center">
                         We are passionate individuals that came together to bring innovation and change to those in need! Do you have an idea or an existing product? 
                         Do you have an innovative and sustainable idea but don't know where to start? Get in touch with us
                         We specialize in Analysis Product related Data, Integrating and creating AI algorythms and consulting on AGILE software development
@@ -65,7 +65,7 @@
                     <a class="btn btn-info btn-warning" href="" role="button">Learn More</a>
   
                   </div>
-                <img class="img-fluid float-right d-none d-sm-block w-50" src="/NeoWeb/images/tree.svg" alt=""/>
+                <img class="img-fluid float-right d-none d-sm-block w-50" src="/images/tree.svg" alt=""/>
               </div>  
             </div>
         </section>
@@ -87,7 +87,7 @@
                     <a class="btn btn-info btn-warning" href="" role="button">Learn More</a>
                     
                   </div>
-                <img class="img-fluid float-right d-none d-sm-block w-50" src="/NeoWeb/images/business.svg" alt=""/>
+                <img class="img-fluid float-right d-none d-sm-block w-50" src="/images/business.svg" alt=""/>
               </div>  
             </div>
         </section>
@@ -106,7 +106,7 @@
                     <a class="btn btn-info btn-warning" href="" role="button">Learn More</a>
   
                   </div>
-                <img class="rounded-circle float-right d-none d-sm-block w-50" src="/NeoWeb/images/brain.svg" alt=""/>
+                <img class="rounded-circle float-right d-none d-sm-block w-50" src="/images/brain.svg" alt=""/>
               </div>  
             </div>
         </section>
@@ -207,7 +207,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-md">
-            <img src="/NeoWeb/images/earth.svg" class="img-fluid w-75" alt="" />
+            <img src="/images/earth.svg" class="img-fluid w-75" alt="" />
           </div>
           <div class="col-md p-5">
             <h1 class="text-danger">Our Mission</h1>
@@ -265,7 +265,7 @@
             <div class="card bg-warning">
               <div class="card-body text-center">
                 <img
-                  src="/NeoWeb/images/Hsaine El-Ali.jfif"
+                  src="/images/Hsaine El-Ali.jfif"
                   class="rounded-circle mb-3 w-50"
                   alt=""
                 />
@@ -307,7 +307,7 @@
             <div class="card bg-warning">
               <div class="card-body text-center">
                 <img
-                  src="/images/Hsaine El-Ali.jfif"
+                  src="/Hsaine El-Ali.jfif"
                   class="rounded-circle mb-3 w-50"
                   alt=""
                 />
