--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     <!--Our instructors-->
 
     <section id="Our Team" class="p-0 bg-white">
-      <div class="bg-image" style="background-image: url('/images/business.svg')">
+      <div class="bg-image" style="background-image: url('/images/basel.jpg')">
       <div class="container p-5">
         <h1 class="text-center text-black">Our Team</h1>
         <p class="lead text-center text-white mb-5">
@@ -339,148 +339,7 @@
     </section>
 
         <!-- Question Accordion -->
-        <section id="questions" class="p-0 bg-warning">
-          <div class="bg-image" style="background-image: url('/images/questions.jpg')">
-            <div class="container p-5">
-              <h2 class="text-center mb-4">Frequently Asked Questions</h2>
-              <div class="accordion accordion-flush" id="questions">
-                <!-- Item 1 -->
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#question-one"
-                    >
-                      What is your chocolate made of?
-                    </button>
-                  </h2>
-                  <div
-                    id="question-one"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#questions"
-                  >
-                    <div class="accordion-body">
-                      Lorem Simpusium bla bla
-                  </div>
-                </div>
-                <!-- Item 2 -->
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#question-two"
-                    >
-                      How much does it cost to attend?
-                    </button>
-                  </h2>
-                  <div
-                    id="question-two"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#questions"
-                  >
-                    <div class="accordion-body">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                      beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                      totam tempora accusamus modi explicabo accusantium consequatur,
-                      praesentium rem quisquam molestias at quos vero. Officiis ad
-                      velit doloremque at. Dignissimos praesentium necessitatibus
-                      natus corrupti cum consequatur aliquam! Minima molestias iure
-                      quam distinctio velit.
-                    </div>
-                  </div>
-                </div>
-                <!-- Item 3 -->
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#question-three"
-                    >
-                      What do I need to Know?
-                    </button>
-                  </h2>
-                  <div
-                    id="question-three"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#questions"
-                  >
-                    <div class="accordion-body">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                      beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                      totam tempora accusamus modi explicabo accusantium consequatur,
-                      praesentium rem quisquam molestias at quos vero. Officiis ad
-                      velit doloremque at. Dignissimos praesentium necessitatibus
-                      natus corrupti cum consequatur aliquam! Minima molestias iure
-                      quam distinctio velit.
-                    </div>
-                  </div>
-                </div>
-                <!-- Item 4 -->
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#question-four"
-                    >
-                      How Do I sign up?
-                    </button>
-                  </h2>
-                  <div
-                    id="question-four"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#questions"
-                  >
-                    <div class="accordion-body">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                      beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                      totam tempora accusamus modi explicabo accusantium consequatur,
-                      praesentium rem quisquam molestias at quos vero. Officiis ad
-                      velit doloremque at. Dignissimos praesentium necessitatibus
-                      natus corrupti cum consequatur aliquam! Minima molestias iure
-                      quam distinctio velit.
-                    </div>
-                  </div>
-                </div>
-                <!-- Item 5 -->
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#question-five"
-                    >
-                      Do you help me find a job?
-                    </button>
-                  </h2>
-                  <div
-                    id="question-five"
-                    class="accordion-collapse collapse"
-                    data-bs-parent="#questions"
-                  >
-                    <div class="accordion-body">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-                      beatae fuga animi distinctio perspiciatis adipisci velit maiores
-                      totam tempora accusamus modi explicabo accusantium consequatur,
-                      praesentium rem quisquam molestias at quos vero. Officiis ad
-                      velit doloremque at. Dignissimos praesentium necessitatibus
-                      natus corrupti cum consequatur aliquam! Minima molestias iure
-                      quam distinctio velit.
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
+        
 
      <!--Newsletter-->
 <!--<section class="bg-warning text-light p-5">
@@ -527,7 +386,7 @@
 
     <!--Contact form 2-->
     <section class="p-0 bg-white">
-      <div class="bg-image" style="background-image: url('/images/contact.jpg')">
+      <div class="bg-image" style="background-image: url('/images/questions.jpg')">
     
       <div class=" text-center mt-3 ">
           <h1 > Contact Form</h1>                       
