--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
           </div>
         </div>
        
-      <div class="container p-5">
-        <div class="row text-center g-4">
-          <div class="justify-content-center">
+      <div class="container">
+        <div class="row text-center">
+          <div class="justify-content-center text-dark">
               <h1>Our Services</h1>
             </div>
           <div class="col-md">
