--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
        
       <div class="container">
         <div class="row text-center">
-          <div class="justify-content-center text-dark">
+          <div class="align-items-center justify-content-center text-dark">
               <h1>Our Services</h1>
             </div>
           <div class="col-md">
@@ -399,6 +399,7 @@
                       " value="Send Message" >                
           </div>       
           </div>
+              </div>
   </div>
    </form>
   </div>
