--- a/index.html
+++ b/index.html
@@ -165,16 +165,8 @@
             </div>
           </div>
         </div>
-      <div class="container p-5">
-        <p>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-        </p>
-      </div>
-       
+  
+      <!--boxes--> 
       <div class="container">
         <div class="row text-center align-items-end">
           <div class="align-items-end justify-content-center text-dark">
