--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   
       <!--boxes--> 
       <div class="container">
-        <div class="row text-center align-items-end">
+        <div class="d-flex align-self-end row text-center">
           <div class="align-items-end justify-content-center text-dark">
               <h1>Our Services</h1>
             </div>
