--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </section>
   -->
    
-    <section id="Order" class="p-0 bg-white text-light" style=" width:100%; height: 1000px !important;">
+    <section id="Order" class="d-flex flex-column p-0 bg-white text-light" style=" width:100%; height: 1000px !important;">
       <div class="bg-image opacity-100" style="background-image: url('/images/technology-human.jpg'); height: 1000px">
         <div class="container">  
           <div class="align-items-center justify-content-between"> 
@@ -167,8 +167,8 @@
         </div>
   
       <!--boxes--> 
-      <div class="container">
-        <div class="d-flex align-self-end row text-center">
+      <div class="d-flex align-items-end flex-column container ">
+        <div class="d-flex align-items-end row text-center">
           <div class="align-items-end justify-content-center text-dark">
               <h1>Our Services</h1>
             </div>
